# pullknock

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: bandit.yml  ci.yml  codeql.yml  pr-title.yml  publish.yml  release-draft.yml  (+3 more)
docs/: 00-overview.md  01-requirements.md  02-architecture.md  03-protocol.md  04-security.md  05-configuration.md  06-publisher-service.md  07-deployment-operations.md  08-test-plan.md  09-roadmap.md  10-config-schema.md  11-release.md  12-web-admin.md  README.md
examples/: agent.yaml  allowed_signers  cli-config.yaml  inventory.yaml  publisher.yaml
pullknock/: __init__.py  admin_server.py  agent.py  audit.py  cli.py  config.py  configgen.py  crypto.py  errors.py  fetcher.py  firewall.py  nonce_store.py  protocol.py  publisher.py  publisher_server.py  signing.py  util.py
reports/: pullknock-0.1.0-sbom.cdx.json
scripts/: _toml_compat.py  check_pr_title.py  check_release_notes.py  check_release_tag.py  e2e_file_mode.py  extract_release_notes.py  generate_config_schema_docs.py  generate_sbom.py  release_check.py  security_scan.py  verify_systemd_hardening.py  verify_wheel_install.py
systemd/: pullknock-agent.logrotate  pullknock-agent.service  pullknock-publisher.service
tests/: test_admin_server.py  test_agent_policy.py  test_cli.py  test_commands.py  test_config.py  test_configgen.py  test_crypto.py  test_fetcher.py  test_firewall.py  test_nonce_store.py  test_protocol.py  test_publisher_backends.py  test_publisher_server.py  test_release_tooling.py
