[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pullknock"
version = "0.1.0"
description = "Reverse-pull dynamic firewall authorization using OpenSSH SSHSIG."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "PullKnock contributors" }
]
dependencies = [
  "click>=8.1",
  "PyYAML>=6.0",
  "requests>=2.31"
]

[project.optional-dependencies]
dev = [
  "pre-commit>=3.7"
]
release = [
  "build>=1.2",
  "tomli>=2.0; python_version < '3.11'",
  "twine>=5.0"
]
security = [
  "pip-audit>=2.7"
]

[project.scripts]
pullknock = "pullknock.cli:main"
pullknock-agent = "pullknock.agent:main"
pullknock-publisher = "pullknock.publisher_server:main"
pullknock-configgen = "pullknock.configgen:main"
pullknock-admin = "pullknock.admin_server:main"

[tool.setuptools.packages.find]
include = ["pullknock*"]
